Add operator row

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
     .button:hover {
       background-color: #ccc;
     }
+    .placeholder {
+      visibility: hidden;
+    }
   </style>
 </head>
 <body>
